--- a/app/views/posts/show-blog.html.erb
+++ b/app/views/posts/show-blog.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<%= render @post =%>
+<%= render 'post' %>
 
 <h2>Comments</h2>
 <div id="comments">
@@ -14,6 +14,5 @@
  </p>
  <p><%= f.submit "Add Comment" %></p>
 <% end %>
-
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
